# simple-image-viewer

./: .gitignore  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  vcpkg.json
